How awersome is that! The penny has dropped!

--- a/decoupling/index.html
+++ b/decoupling/index.html
@@ -12,6 +12,6 @@
     <div>I've got the blues ... Let's paint the town red!</div>
     <div>I've got the blues ... Let's paint the town red!</div>
   </body>
-  <!-- <script type="text/javascript" src="functionCentric.js"></script> -->
-  <script type="text/javascript" src="objectCentric.js"></script>
+  <script type="text/javascript" src="functionCentric.js"></script>
+  <!-- <script type="text/javascript" src="objectCentric.js"></script> -->
 </html>
